--- a/thirdDay/styles/stylesheets.css
+++ b/thirdDay/styles/stylesheets.css
@@ -14,12 +14,6 @@
 	width: 100%;
 }
 
-#secondContainer {
-	border: 2px solid blue;
-	width: 100%;
-	height: 500px;
-	position: absolute;
-}
 #overlay {
 	position: absolute;
 	left: 0px;
@@ -31,15 +25,24 @@
 }
 #bigPic {
 	width: 100%;
-	position: absolute;
+	position: relative;
 }
 
+#secondContainer {
+	border: 2px solid red;
+	width: 100%;
+	height: 500px;
+}
+
+
+/*
 #cat, #world, #warmUp, #noLimits {
 	border: solid 2px red;
 	width: 50%;
 	height: 50%;
 	position: absolute;
 }
+
 
 #cat {
 	left: 0px;
@@ -52,7 +55,7 @@
 #warmUp {
 	left: 0%;
 	background-color: green;
-	top: 9	0%;
+	top: 50%;
 }
 
 #noLimits {
@@ -60,3 +63,4 @@
 	background-color: blue;
 	top: 50%;
 }
+*/
