--- a/fifthDay/styles/stylesheets.css
+++ b/fifthDay/styles/stylesheets.css
@@ -30,15 +30,15 @@
 #bigPic {
 	width: 100%;
 	position: relative;
+	text-align: center;
 }
 
 .bottom {
-	border: 2px solid yellow;
 	width: 100%;
 	padding-left: 10%;
 	padding-right: 10%;
 	text-align: center;
-	background-color: gray;
+	background-color: #DCDCDC;
 	margin-bottom: 0px;
 }
 
@@ -47,7 +47,6 @@
 	text-align: left;
 	position: relative;
 	padding-top: 20px;
-
 }
 
 .pAndH3 {
@@ -68,10 +67,43 @@ h3 {
 }
 .inline {
 	display: inline-block;
-		width: 45%;
+	width: 45%
+
 }
 
 #copyRight {
-	background-color: blue;
+	background-color: gray;
+	width: 100%;
 	margin-top: 0px;
+}
+
+#copyRight p {
+	margin: 0px;
+}
+#welcomeToBerlin {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	color: white;
+	text-align: center;
+	font-size: 60px;
+}
+
+#getStarted {
+	width: 100%;
+	position: absolute;
+	top: 50%;
+}
+
+#getStarted p {
+	margin-top: 60px;
+	color: red;
+	border: 2px solid red;
+	font-size: 60px;
+	background-color: yellow;
+	border-radius: 50px;
+	width: 400px;
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
 }
