adjuct the position of the text

--- a/16thDay/spotifySelector/styles/stylesheet.css
+++ b/16thDay/spotifySelector/styles/stylesheet.css
@@ -1,15 +1,17 @@
 img {
+  vertical-align: middle;
   height: 150px;
   width: 150px;
   padding-top: 25px;
 }
 
 div  {
+  border: 2px solid red;
   position: relative;
 }
 div span {
   position: relative;
-  top: -75px;
+  top: -50%;
 }
 
 body {
